syntax = "proto3";

package lambchain.lambchain;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "lambchain/lambchain/params.proto";
import "lambchain/lambchain/suma.proto";

option go_package = "lambchain/x/lambchain/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/lambchain/lambchain/params";
  
  }
  
  // Queries a list of Suma items.
  rpc Suma    (QueryGetSumaRequest) returns (QueryGetSumaResponse) {
    option (google.api.http).get = "/lambchain/lambchain/suma/{id}";
  
  }
  rpc SumaAll (QueryAllSumaRequest) returns (QueryAllSumaResponse) {
    option (google.api.http).get = "/lambchain/lambchain/suma";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QueryGetSumaRequest {
  uint64 id = 1;
}

message QueryGetSumaResponse {
  Suma Suma = 1 [(gogoproto.nullable) = false];
}

message QueryAllSumaRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllSumaResponse {
  repeated Suma                                   Suma       = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

